--- a/IQ-fight/IQ-fight/Storyboard.storyboard
+++ b/IQ-fight/IQ-fight/Storyboard.storyboard
@@ -760,14 +760,14 @@
                                             <action selector="answerButtonTapped:" destination="AdP-w4-jkd" eventType="touchUpInside" id="Sh5-HR-9e7"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="peshotesttesttest@abv.bg answered correct on question 5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="Dwf-tw-3Nv">
-                                        <rect key="frame" x="10" y="469" width="300" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Nobody answered correct" id="Vge-aj-fGH">
+                                        <rect key="frame" x="10" y="464" width="300" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
                                 </subviews>
                             </scrollView>
                         </subviews>
@@ -785,7 +785,7 @@
                         <outlet property="answer3ImageView" destination="eIs-gT-FCC" id="aeV-Pf-yTw"/>
                         <outlet property="answer4Button" destination="RbI-RX-yBz" id="cyL-er-drL"/>
                         <outlet property="answer4ImageView" destination="Vfu-f7-D1i" id="Z9w-81-Ctp"/>
-                        <outlet property="infoLabel" destination="Dwf-tw-3Nv" id="mu8-m6-9Wg"/>
+                        <outlet property="infoTextView" destination="Vge-aj-fGH" id="Suq-av-EBl"/>
                         <outlet property="player1Label" destination="TZp-G0-oVe" id="PdN-z1-4bL"/>
                         <outlet property="player2Label" destination="5US-cy-EpJ" id="Wli-30-Yxv"/>
                         <outlet property="player3Label" destination="T66-sM-kzL" id="epJ-rs-k0b"/>
